cpp/summaries/2020-08-15T00:58:45+10:00-summary
Loading: 
Loading: 0 packages loaded
Analyzing: target //src/pso/main:summary (0 packages loaded, 0 targets configured)
INFO: Analyzed target //src/pso/main:summary (0 packages loaded, 0 targets configured).
INFO: Found 1 target...
[0 / 4] [Prepa] BazelWorkspaceStatusAction stable-status.txt
ERROR: /home/dom/tetrisai/cpp/src/pso/main/BUILD:37:1: C++ compilation of rule '//src/pso/main:summary' failed (Exit 1) gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer '-std=c++0x' -MD -MF ... (remaining 332 argument(s) skipped)

Use --sandbox_debug to see verbose messages from the sandbox
src/pso/main/main_summary.cpp: In function 'fort::char_table getNoroLookaheadData(const SummaryApi&, const std::vector<std::__cxx11::basic_string<char> >&)':
src/pso/main/main_summary.cpp:115:46: error: invalid operands of types 'const char [23]' and 'const char [6]' to binary 'operator+'
  115 |   outputResults(r.getResult(), WORKSPACE_DIR + "/name" + std::to_string(std::chrono::system_clock::now().time_since_epoch().count()));
      |                                              ^ ~~~~~~~
      |                                                |
      |                                                const char [6]
Target //src/pso/main:summary failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 1.366s, Critical Path: 1.27s
INFO: 0 processes.
FAILED: Build did NOT complete successfully
ERROR: Build failed. Not running target
FAILED: Build did NOT complete successfully
